repsonsiveness fixed for about, feature and herosection, but it has invisible overflow? probably a css class needs to be changed or added

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,6 +29,7 @@ header{
   max-width: 650px;
   margin: 0 auto;
   justify-content: start;
+
 }
 
 
@@ -77,7 +78,7 @@ header{
   background-image: url("/aboutbg4.svg");
   background-repeat: no-repeat;
   background-size: 100%;
-  transform:scaleY(-1);
+  
   background-position:center;
   max-width:100%;
   
@@ -101,6 +102,18 @@ header{
   background-position:center;
   max-width:100%;
   
+}
+@media screen and (max-width:1000px){
+  .aboutbg{
+    max-width:100%;
+    aspect-ratio:0;
+  }
+  
+ .aboutbg2{
+    max-width:50%;
+    aspect-ratio: 0;
+ }
+ 
 }
 
 
